test/ill-formed/0031_nonconst_array_param.c
void f (int a[static restrict 5]) {}
